--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -82,7 +82,7 @@
         }
 
         function addKeyword(insertKey){
-             "/" + docuemnt.getElementById("keywordsInput").value(insertKey)
+             "/" + docuemnt.getElementById("keywordsInput").value += insertKey
         }
     </script>
 </body>
