--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -83,7 +83,7 @@
         }
 
         function addKeyword(insertKey){
-             "/" + docuemnt.getElementById("keywordsInput").value += insertKey
+             document.getElementById("keywordsInput").value = document.getElementById("keywordsInput").value + "/" + insertKey
         }
     </script>
 </body>
