--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,9 @@
             <div id="form-mail-registration">
                 <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=text name=email placeholder="Email" required>
                 <hr style="margin-left: 40%; margin-right:35%">
-                <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password name=password placeholder="Password" required>
+                <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
+                <hr style="margin-left: 40%; margin-right:35%">
+                <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
                 <hr style="margin-left: 40%; margin-right:35%">
                 <select style="margin-left: 40%;" size="margin-left: 40%" name="purpose" class="mainForm" id="rgstr" required>
                     <option value="Advertiser">Your Purpose</option>
@@ -32,12 +34,24 @@
                 </select>
                 <hr style="margin-left: 40%; margin-right:35%">
                 <br>
-                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type=submit value="Register">
+                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" onclick="validator()" value="Register">
             </div>
         </form>
     </div>
     <br>
     <div style="margin-left: 40%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
     <br>
+    <script>
+        function validator(){
+            const passOrigin = document.getElementById("passOrigin").value
+            const passAgain = document.getElementById("passAgain").value
+            if(passAgain != passOrigin){
+                alert("Passwords do not match!")
+                return;
+            }
+
+            document.getElementById("form-id").submit();
+        }
+    </script>
 </body>
 </html>
