--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,9 @@
       display: none;
       overflow: hidden;
     }
+    .alertbox {
+      padding: 20px;
+      background-color: #f44336; /* Red */
+      color: white;
+      margin-bottom: 15px;
+    }
