--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
     <div style="margin-top: 3%">
         <form id="form-id" method=post enctype=multipart/form-data>
             <div id="form-mail-registration">
-                <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=text name=email placeholder="Email" required>
+                <input style="margin-left: 40%; margin-right:35%;" class="mainForm" type=text name=email placeholder="Email" required>
                 <hr style="margin-left: 40%; margin-right:35%">
                 <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
                 <hr style="margin-left: 40%; margin-right:35%">
