--- a/templates/register.html
+++ b/templates/register.html
@@ -35,7 +35,7 @@
                 </select>
                 <hr style="margin-left: 40%; margin-right:35%">
                 <br>
-                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" onclick="validator()" value="Register">
+                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type="button" onclick="validator()" value="Register">
             </div>
         </form>
     </div>
