--- a/templates/register.html
+++ b/templates/register.html
@@ -51,7 +51,7 @@
                 return;
             }
 
-            document.getElementById("alert-box").submit()
+            document.getElementById("form-id").submit()
         }
     </script>
 </body>
