--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,7 @@
 </head>
 <body style="font-family: open sans">
     <div class="alertbox" hidden="true" id="alert-box">Passwords do not match</div>
+    <div class="alertbox" hidden="true" id="alert-form">You need to fill all fields to submit the form</div>
     <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 1%; position: fixed">
         <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
         <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
@@ -44,12 +45,23 @@
     <br>
     <script>
         function validator(){
+            const formElements = document.getElementsByTagName("input")
+
+            for(let i = 0; i < formElements.length; i++{
+                if(formElements[i].length < 3){
+                    document.getElementById("alert-form").hidden = false;
+                    return;
+                }
+            }
+
             const passOrigin = document.getElementById("passOrigin").value
             const passAgain = document.getElementById("passAgain").value
             if(passAgain != passOrigin){
                 document.getElementById("alert-box").hidden = false;
                 return;
             }
+
+
 
             document.getElementById("form-id").submit()
         }
