--- a/templates/register.html
+++ b/templates/register.html
@@ -47,7 +47,7 @@
         function validator(){
             const formElements = document.getElementsByTagName("input")
 
-            for(let i = 0; i < formElements.length; i++{
+            for(let i = 0; i < formElements.length; i++){
                 if(formElements[i].length < 3){
                     document.getElementById("alert-form").hidden = false;
                     return;
