--- a/templates/register.html
+++ b/templates/register.html
@@ -48,7 +48,7 @@
             const formElements = document.getElementsByTagName("input")
 
             for(let i = 0; i < formElements.length; i++){
-                if(formElements[i].length < 3){
+                if(formElements[i].value.length < 3){
                     document.getElementById("alert-form").hidden = false;
                     return;
                 }
