--- a/templates/docs.html
+++ b/templates/docs.html
@@ -42,7 +42,7 @@
         <p>Than add the domain to the database by filing the form. Your domain will be confirmed if the inadsconfirm.txt file can be detected in your website and you will be ready to monetize your website.</p>
         <h3>How to use InAds in Unity</h3>
         <p>Go to add domain tab and enter unity, with lowercase letters, as your domain and get your API key from the website performance tab.</p>
-        <p>Download the <a href="/unityextension" style="text-decoration: none">InAds Script for Unity</a>. Create a Raw Image object in your UI canvas and add the InAds Script as a component.</p>
+        <p>Download the <a href="/unityextension.cs" style="text-decoration: none">InAds Script for Unity</a>. Create a Raw Image object in your UI canvas and add the InAds Script as a component.</p>
     </div>
     <center><button class="buttonBlue" style="margin-left: 5%; margin-top: 50vh" onclick="document.location = '/register'">Start Now</button></center>
 </body>
