--- a/templates/docs.html
+++ b/templates/docs.html
@@ -40,7 +40,7 @@
         <h3>How to add a domain?</h3>
         <p>Make sure to download the inadsconfirm.txt file from domain add page of your dashboard and add it to your website as inadsconfirm.txt without any change. The file must be accessible through http://&lt;yourdomain>/inadsconfirm.txt</p>
         <p>Than add the domain to the database by filing the form. Your domain will be confirmed if the inadsconfirm.txt file can be detected in your website and you will be ready to monetize your website.</p>
-        <a onclick="InAdsUnity()" style="text-decoration: none">InAds with Unity</a>
+        <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">InAds with Unity</a>
         <div id="InAdsUnity" hidden="true">
             <h3>How to use InAds with Unity</h3>
             <p>Go to add domain tab and enter unity, with lowercase letters, as your domain and get your API key from the website performance tab.</p>
