--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
 <body style="font-family: Open Sans;">
     <div style="margin-left: 10%; margin-top: 5%">
         <h1>The page you are looking for cannot be found</h1>
-        <a href="/">Return back home</a>
+        <a href="/" style="color: blue; text-decoration: none"><small>Return back home</small></a>
         <br>
         <small>InAds</small>
     </div>
