--- a/templates/docs.html
+++ b/templates/docs.html
@@ -23,7 +23,7 @@
         <br>
         Place the code bellow at the bottom of your webpage's body
         <br>
-        <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inadsglobal.tk/inads/&lt;writesomethinghere>">&lt;/script></p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;script src="http://www.inadsglobal.tk/inads/&lt;writesomethinghere>">&lt;/script></p>
         The code above will place ads automatically. However you can customise the size, number and places of ads on your webpage as well. Use the code bellow to customize the ads. Replace &lt;writesomething here> whatever you want. This extra part of the url is just to increase its resistance against ad block.
         <p style="background-color: rgb(230, 230, 235)">&lt;div>&lt;img class=inads name=&lt;shape>>&lt;/div></p>
         There are three different ad shapes:
