--- a/templates/docs.html
+++ b/templates/docs.html
@@ -43,7 +43,7 @@
         <div id="InAdsUnity" hidden="true">
             <h3>How to use InAds with Unity</h3>
             <p>Go to add domain tab and enter unity, with lowercase letters, as your domain and get your API key from the website performance tab.</p>
-            <p>Download the <a href="/unityextension.cs" style="text-decoration: none">InAds Script for Unity</a>. Create a Raw Image object in your UI canvas and add the InAds Script as a component.</p>
+            <p>Download the <a href="/unityextensioninads.cs" style="text-decoration: none">InAds Script for Unity</a>. Create a Raw Image object in your UI canvas and add the InAds Script as a component.</p>
         </div>
     </div>
     <center><button class="buttonBlue" style="margin-left: 5%; margin-top: 10%" onclick="document.location = '/register'">Start Now</button></center>
