--- a/templates/docs.html
+++ b/templates/docs.html
@@ -14,7 +14,7 @@
             <a class="navbarElement" href="/plans"><small>Plans</small></a>
             <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
             <a class="navbarElement" href="/docs"><small>Docs</small></a>
-            <a class="navbarElement" style="float: right; margin-right: 5%" href="/docs" id="langelement"><small>TR</small></a>
+            <a class="navbarElement" style="float: right; margin-right: 5%" href="/docs" id="langelement" onclick="InAdsLanguage()"><small>TR</small></a>
         </div>
     <hr style="opacity: .3">
     <div style="margin-left: 5%" id="en">
