--- a/templates/docs.html
+++ b/templates/docs.html
@@ -87,7 +87,7 @@
             if(document.getElementById("langelement").innerHTML == "EN")
                 document.getElementById("langelement").innerHTML = "TR"
             else
-                document.getElementById("langelement").innerHTML = "TR"
+                document.getElementById("langelement").innerHTML = "EN"
 
             document.getElementById("tr").hidden = !document.getElementById("tr").hidden
             document.getElementById("en").hidden = !document.getElementById("en").hidden
