--- a/templates/docs.html
+++ b/templates/docs.html
@@ -84,10 +84,10 @@
             document.getElementById("InAdsUnityTR").hidden = !document.getElementById("InAdsUnityTR").hidden;
         }
         function InAdsLanguage(){
-            if(document.getElementById("langelement").innerHTML == "EN")
-                document.getElementById("langelement").innerHTML = "TR"
+            if(document.getElementById("langelement").innerHTML == "<small>EN</small>")
+                document.getElementById("langelement").innerHTML = "<small>TR</small>"
             else
-                document.getElementById("langelement").innerHTML = "EN"
+                document.getElementById("langelement").innerHTML = "<small>EN</small>"
 
             document.getElementById("tr").hidden = !document.getElementById("tr").hidden
             document.getElementById("en").hidden = !document.getElementById("en").hidden
