--- a/templates/docs.html
+++ b/templates/docs.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div style="margin-left: 5%" id="tr" hidden="true">
-        <h1>Super Simple Integration!</h1>
+        <h1>Kolay Entegrasyon!</h1>
         Öncelikle alan adınızı InAds gösterge panelinin alan adı ekleme sekmesinden InAds sistemine ekleyin.
         <br>
         <br>
