--- a/templates/account.html
+++ b/templates/account.html
@@ -44,7 +44,7 @@
                 </div>
             {% endfor %}
         {% endif %}
-        <a href="/logout" style="text-decoration: none; margin-left: 5%">Logout</a>
+        <a href="/logout" style="text-decoration: none; margin-left: 5%">Logout</a> <a href="/change_password" style="text-decoration: none; margin-left: 5%">Change Password</a>
     </div>
 </body>
 </html>
