--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -25,7 +25,7 @@
             <hr style="margin-left: 40%; margin-right:35%">
             <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password name=passwordver id="passwordnewagain" placeholder="New Password Again">
             <hr style="margin-left: 40%; margin-right:35%">
-            <input class="buttonGray" style="margin-left: 40%" onclick="formVerifier()" value="Change">
+            <input class="buttonGray" style="margin-left: 40%" type="button" onclick="formVerifier()" value="Change">
         </form>
     </div>
     <script>
