--- a/templates/docs.html
+++ b/templates/docs.html
@@ -24,7 +24,7 @@
         <br>
         Place the code bellow at the bottom of your webpage's body
         <br>
-        <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inadsglobal.tk/inads/&lt;writesomethinghere>">&lt;/script></p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inadsglobal.com/inads/&lt;writesomethinghere>">&lt;/script></p>
         The code above will place ads automatically. However you can customise the size, number and places of ads on your webpage as well. Use the code bellow to customize the ads. Replace &lt;writesomething here> whatever you want. This extra part of the url is just to increase its resistance against ad block.
         <p style="background-color: rgb(230, 230, 235)">&lt;div>&lt;img class=inads name=&lt;shape>>&lt;/div></p>
         There are three different ad shapes:
@@ -54,7 +54,7 @@
         <br>
         Aşağıda yer alan kodu web sayfanıza ekleyin.
         <br>
-        <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inadsglobal.tk/inads/&lt;writesomethinghere>">&lt;/script></p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inadsglobal.com/inads/&lt;writesomethinghere>">&lt;/script></p>
         Eğer sadece bu kodu yerleştirip bırakırsanız otomatik yerleştirmeyi etkinleştirmiş olursunuz verilen script sizin yerinize web sayfanıza reklamları ekleyecektir. Fakat eğer isterseniz yukarıdaki kodu kullanarak reklamlarınızın sayısını, boyutlarını ve yerlerini özelleştirebilirsiniz.
         <p style="background-color: rgb(230, 230, 235)">&lt;div>&lt;img class=inads name=&lt;shape>>&lt;/div></p>
         Şu anlık web sayfanıza ekleyebileceğiniz reklam çeşitleri aşağıdaki gibidir.
