--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -10,8 +10,7 @@
     <div style="min-height: 100vh; background-color: rgba(150, 238, 229, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left; position: fixed">
         <div style="color: black; margin-left: 25%;">
             <br>
-            {{ user.email }}
-            <br>
+            <div style="font-size: 80%">{{ user.email }}</div>
             <a style="margin-top: 30%" href="/dashboard" class="navbarElement">Dashboard</a>
             <br>
             <a style="margin-top: 10%" href="/advertise" class="navbarElement">Start a campaign</a>
