--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,7 +26,7 @@
             <br>
             <a style="margin-top: 10%" href="/website_performance" class="navbarElement">Website Performance</a>
             <br>
-            {% if user.email in authorized_emails %}
+            {% if is_admin %}
                 <a style="margin-top: 10%" href="/web_traffic" class="navbarElement">View Website Traffic</a>
             {% endif %}
             {% endif %}
