--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -29,8 +29,8 @@
         function calculate(){
             var revestimate = document.getElementById("monthlyvis").value * 0.0004 * 4
             var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.007
-            var frev = parseFloat(revestimate + revestimate2 * 3) + " $ per month"
-            document.getElementById("outcome").innerHTML = frev.toFixed(2);
+            var frev = parseFloat(revestimate + revestimate2 * 3)
+            document.getElementById("outcome").innerHTML = frev.toFixed(2)  + " $ per month";
         }
     </script>
 </body>
