--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -21,16 +21,15 @@
     <input style="margin-left: 5%" onchange="calculate()" type="number" id="monthlyvis" class="mainForm" placeholder="Number of monthly visitors">
     <hr style="margin-left: 5%; margin-right: 70%">
     <br>
-    <strong style="margin-left: 5%; margin-right: 5%">*These estimates do not represent the actual numbers, your revenue can change depending on number of ads per page and user attraction. Just an estimate of your earnings. This estimate assumes there are more than one ad spots and multiple pages with ads on your website. You can place as many ads as you want in your website.</strong>
+    <strong style="margin-left: 5%; margin-right: 5%">*These estimates do not represent the actual numbers, you revenue can change depending on number of ads per page and user attraction. Just an estimate of your earnings. This estimate assumes there are more than one ad spots and multiple pages with ads on your website. You can place as many ads as you want to in your website.</strong>
     <br>
     <h1 style="font-size: 4rem; margin-left: 5%" id="outcome"></h1>
 
     <script>
         function calculate(){
-            var revestimate = document.getElementById("monthlyvis").value * 0.0004 * 5
-            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.007
-            var frev = parseFloat(revestimate + revestimate2 * 3 * 12)
-            document.getElementById("outcome").innerHTML = frev.toFixed(2)  + " $ annually";
+            var revestimate = document.getElementById("monthlyvis").value * 0.001 * 5
+            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.005
+            document.getElementById("outcome").innerHTML = revestimate + revestimate2 * 3 * 12 + " $ annually"
         }
     </script>
 </body>
