--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -30,7 +30,7 @@
             var revestimate = document.getElementById("monthlyvis").value * 0.0004 * 5
             var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.007
             var frev = parseFloat(revestimate + revestimate2 * 3 * 12)
-            document.getElementById("outcome").innerHTML = frev.toFixed(2)  + " $ per month";
+            document.getElementById("outcome").innerHTML = frev.toFixed(2)  + " $ annually";
         }
     </script>
 </body>
