--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,8 @@
     <center>
         <h1>Why InAds?</h1>
         <br>
+        <h1>50M+ Traffic | Show your ads to over 50 million people.</h1>
+        <br>
         <h3>Make money from your website</h3>
         <p style="margin-right: 10%; margin-left: 10%;">Unlike many advertising networks, InAds adopts a no commission policy.
             With no commission or extra fees on your income and make 20 Cents per click.
