--- a/templates/index.html
+++ b/templates/index.html
@@ -84,5 +84,9 @@
         <h1>Copy and paste a single line of code and place the ads on your website to 5x your income.</h1>
         <button style="margin-top: 5%; margin-bottom: 5%" class="buttonBlue" onclick="document.location = '/register'">Start Now</button>
     </center>
+    <br>
+    <center style="background-color: rgb(230, 230, 235)">
+        <h1 style="color: white">InAds by InGames, Inc.</h1>
+    </center>
 </body>
 </html>
