--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -48,6 +48,7 @@
                 <option value="inadsbanner">Banner(For vertically placed ads)</option>
                 <option value="inadstandard">Rectangle(For horizontally placed ads)</option>
                 <option value="inadsquare">Square</option>
+                <option value="inadsaudio">Audio</option>
             </select>
             <hr>
             <br>
