--- a/templates/payout.html
+++ b/templates/payout.html
@@ -58,7 +58,7 @@
             <br>
             <br>
             Enter all the applicable information, you can leave some entries empty.
-            Receiving payments can take up to 2 weeks.
+            Receiving payments can take up to a month depending on your region, about 2 weeks in average.
         </form>
     </div>
 </body>
