--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -60,7 +60,7 @@
                 <p onclick="addKeyword('{{ i }}')">{{ i }}</p>
             {% endfor %}
         </div>
-        <small>Direct keywords are keywords that are already manually registered by the websites you can also insert your own keywords that you think is fitting into the context of your ad. the system will automatically assign them into the best fitting web pages.</small>
+        <small>Direct keywords are keywords that are already manually registered by the websites you can also insert your own keywords that you think is fitting into the context of your ad. The system will automatically assign them into the best fitting web pages.</small>
     </div>
     <script>
         var acc = document.getElementsByClassName("accordion");
