--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,7 +39,7 @@
         </div>
         <h2 style="margin-top: 10%; margin-left: 5%">Active Campaigns</h2>
         {% for i in ads %}
-            <button style="margin-left: 10%; margin-right: 5%" class="accordion">{{ i.advertiserwebsite }}</button>
+            <button style="margin-left: 10%; width: 80%" class="accordion">{{ i.advertiserwebsite }}</button>
             <div style="margin-left: 10%" class="panel">
                 <div>
                     <h3>{{ i.advertiserwebsite }}</h3>
