--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,7 +11,7 @@
         <div style="color: black; margin-left: 25%;">
             <br>
             <div style="font-size: 80%">{{ user.email }}</div>
-            {% if user.is_partner == "true" %}
+            {% if is_partner %}
                 <br>
                 <strong style="font-size: 80%">Advertising Partner</strong>
             {% endif %}
