--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,7 +13,7 @@
             <div style="font-size: 80%">{{ user.email }}</div>
             {% if user.is_partner %}
                 <br>
-                <strong style="font-size: 80%">Advertising Partner</strong>
+                <strong class="navbarElement" style="font-size: 80%">Advertising Partner</strong>
             {% endif %}
             <a style="margin-top: 30%" href="/dashboard" class="navbarElement">Dashboard</a>
             <br>
