--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,10 +12,9 @@
             <br>
             <div style="font-size: 80%">{{ user.email }}</div>
             {% if user.is_partner %}
-                <br>
-                <strong class="navbarElement" style="font-size: 80%">Advertising Partner</strong>
+                <div class="navbarElement" style="font-size: 80%; margin-top: 30%">Advertising Partner</div>
             {% endif %}
-            <a style="margin-top: 30%" href="/dashboard" class="navbarElement">Dashboard</a>
+            <a href="/dashboard" class="navbarElement">Dashboard</a>
             <br>
             <a style="margin-top: 10%" href="/advertise" class="navbarElement">Start a campaign</a>
             <br>
