--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,7 +11,7 @@
         <div style="color: black; margin-left: 25%;">
             <br>
             <div style="font-size: 80%">{{ user.email }}</div>
-            <a href="/dashboard" class="navbarElement">Dashboard</a>
+            <a href="/dashboard" style="margin-top: 30%" class="navbarElement">Dashboard</a>
             <br>
             <a style="margin-top: 10%" href="/advertise" class="navbarElement">Start a campaign</a>
             <br>
