--- a/templates/loadmoney.html
+++ b/templates/loadmoney.html
@@ -38,6 +38,7 @@
             <hr style="margin-left: 10%; margin-right:35%">
             <input class="buttonGray" style="margin-left: 40%" type=submit value="Pay">
         </form>
+        <small style="margin-left: 10%">Payment fees may apply</small>
         <center>
             <h2>Current account balance: {{ "%.2f" % user.account_balance }} $</h2>
         </center>
