--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -44,8 +44,6 @@
             <hr>
             <input id="keywordsInput" class="mainFormBig" style="width: 90%" type=text name=keywords placeholder="Targeted Keywords with '/' in between.">
             <hr>
-            <input id="languageInp" class="mainFormBig" style="width: 90%" type=text name=languages placeholder="Ad Type" readonly>
-            <hr>
             <select class="mainFormBig" name="typeAd">
                 <option value="inadsbanner">Banner(For vertically placed ads)</option>
                 <option value="inadstandard">Rectangle(For horizontally placed ads)</option>
@@ -56,10 +54,10 @@
             <input class="buttonBlue" style="width: 25%" type=submit value="Start Campaign">
         </form>
         <br>
-        <button class="accordion">Targeted Languages</button>
+        <button class="accordion">Recommended Keywords</button>
         <div class="panel" style="height: 70vh; overflow: auto">
-            {% for i in languages %}
-                <p onclick="addLanguage('{{ i }}')">{{ i }}</p>
+            {% for i in total_keywords %}
+                <p onclick="addKeyword('{{ i }}')">{{ i }}</p>
             {% endfor %}
         </div>
     </div>
@@ -83,8 +81,8 @@
             document.getElementById("uploadButton").innerHTML = "File Selected"
         }
 
-        function addLanguage(insertKey){
-             document.getElementById("languageInp").value = document.getElementById("languageInp").value + "/" + insertKey
+        function addKeyword(insertKey){
+             document.getElementById("keywordsInput").value = document.getElementById("keywordsInput").value + "/" + insertKey
         }
     </script>
 </body>
