--- a/templates/partners.html
+++ b/templates/partners.html
@@ -19,12 +19,12 @@
     <h3>Our Ad Partners</h3>
     <h4>Advertising partners are corporate advertisers registered to the InAds Global Display Network</h4>
     <br>
-    <center>
+    <div style="margin-left: 5%">
         <div style="float: left; width: 15%">
-            <img src="/logos/vayes.jpg" alt="">
+            <img src="/logos/vayes.jpg" style="width: 100%" alt="">
             <br>
-            <a style="color: black; text-decoration: none" href="http://vayes.com.tr">Vayes</a>
+            <center><a style="color: black; text-decoration: none" href="http://vayes.com.tr">Vayes</a></center>
         </div>
-    </center>
+    </div>
 </body>
 </html>
