--- a/templates/partners.html
+++ b/templates/partners.html
@@ -16,8 +16,8 @@
             <a class="navbarElement" href="/docs"><small>Docs</small></a>
         </div>
         <hr style="opacity: .3">
-    <h3>Our Ad Partners</h3>
-    <h4>Advertising partners are corporate advertisers registered to the InAds Global Display Network</h4>
+    <h3 style="margin-left: 5%">Our Ad Partners</h3>
+    <h4 style="margin-left: 5%">Advertising partners are corporate advertisers registered to the InAds Global Display Network</h4>
     <br>
     <div style="margin-left: 5%">
         <div style="float: left; width: 15%">
