--- a/templates/intro.html
+++ b/templates/intro.html
@@ -16,7 +16,9 @@
             <a class="navbarElement" href="/docs"><small>Docs</small></a>
         </div>
         <hr style="opacity: .3">
-    <h1>Intro Presentation</h1>
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTmFpo8u5ECfpre4GHM3QTOB1UlYiEz7MjCml2nejU9ebCBM_yIjli-kLn---nXtw-Wa5SJ7WLnTimA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <center>
+            <h1>Intro Presentation</h1>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTmFpo8u5ECfpre4GHM3QTOB1UlYiEz7MjCml2nejU9ebCBM_yIjli-kLn---nXtw-Wa5SJ7WLnTimA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </center>
 </body>
 </html>
