--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <center>
         <h1>Why InAds?</h1>
         <br>
-        <h1>100M+ Traffic | Show your ads to over 100 million people.</h1>
+        <h1>100M+ Traffic Monthly Traffic | Show your ads to over 100 million people.</h1>
         <br>
         <h3>Make money from your website</h3>
         <p style="margin-right: 10%; margin-left: 10%;">Unlike many advertising networks, InAds adopts a no commission policy.
