--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -55,6 +55,7 @@
         </form>
         <br>
         <img id="output" src="" alt="">
+        <p id="sizes"></p>
     </div>
     <script>
         var loadFile = function(event) {
@@ -62,6 +63,7 @@
             output.src = URL.createObjectURL(event.target.files[0]);
             output.onload = function() {
               URL.revokeObjectURL(output.src) // free memory
+              document.getElementById("sizes").innerHTML = event.files[0].size
             }
         };
 
