--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -74,6 +74,8 @@
               }
               document.getElementById("uploadButton").innerHTML = event.target.files[0].name
             }
+            alert(event.target.files[0].width)
+            alert(event.target.files[0].height)
         };
 
         var acc = document.getElementsByClassName("accordion");
