--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -62,17 +62,23 @@
             var output = document.getElementById('output');
             output.src = URL.createObjectURL(event.target.files[0]);
             output.onload = function() {
-              URL.revokeObjectURL(output.src) // free memory
-              if (Math.abs(event.target.files[0].width - event.target.files[0].height) < 200){
-                document.getElementById("shapead").value = "inadsquare"
-              }
-              else if ((event.target.files[0].width - event.target.files[0].height) < 0){
+            URL.revokeObjectURL(output.src)
+
+            var image = new Image();
+            image.src = event.target.result
+            image.onload = function () {
+            var height = this.height;
+            var width = this.width;
+            if (Math.abs(width - height) < 200){
+              document.getElementById("shapead").value = "inadsquare"
+            }
+            else if ((width - height) < 0){
                 document.getElementById("shapead").value = "inadsbanner"
-              }
-              else if ((event.target.files[0].width - event.target.files[0].height) > 0){
-                document.getElementById("shapead").value = "inadstandard"
-              }
-              document.getElementById("uploadButton").innerHTML = event.target.files[0].name
+            }
+            else if ((width - height) > 0){
+              document.getElementById("shapead").value = "inadstandard"
+            }
+            document.getElementById("uploadButton").innerHTML = event.target.files[0].name
             }
             alert(event.target.files[0].width)
             alert(event.target.files[0].height)
