--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -45,9 +45,9 @@
             <input id="keywordsInput" class="mainFormBig" style="width: 90%" type=text name=keywords placeholder="Targeted Keywords with '/' in between.">
             <hr>
             <select class="mainFormBig" name="typeAd" id="shapead">
-                <option value="inadsbanner">Banner(For vertically placed ads)</option>
-                <option value="inadstandard">Rectangle(For horizontally placed ads)</option>
-                <option value="inadsquare">Square</option>
+                <option value="inadsbanner">Banner - Typically for vertically placed ads</option>
+                <option value="inadstandard">Rectangle - Typically for horizontally placed ads</option>
+                <option value="inadsquare">Square - For ads with equal width and height</option>
             </select>
             <hr>
             <br>
